--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.20.0",
+        "react-redux": "^9.0.4",
+        "@reduxjs/toolkit": "^2.0.1",
         "axios": "^1.6.2"
     },
     "devDependencies": {
